Update insall guide for Chrome 21+. Close #560. I hate that.

--- a/index.html
+++ b/index.html
@@ -198,7 +198,10 @@ code {
       <iframe id=installframe style='width:0px;height:0px;display:none;' src=''></iframe>
 
       <b class=chrome>Chrome</b>:
-      <ol><li>Install 4chan X, that's it.</li></ol>
+      <ol>
+        <li>Save the 4chan X file from the install button.</li>
+        <li>Drag and drop the file into the extensions page (<code>chrome://chrome/extensions/</code>).</li>
+      </ol>
 
       <b class=firefox>Firefox</b>:
       <ol>
