Update flex css display.

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@ nav > div {
   display: inline-block;
 }
 nav > div > div {
-  display: -webkit-box;
-  -webkit-box-pack: justify;
+  display: -webkit-flex;
+  -webkit-justify-content: space-between;
 }
 nav a > div {
   display: block !important;
@@ -106,7 +106,6 @@ nav a > div {
 nav a {
   color: #EEE;
   display: inline-block;
-  display: -webkit-box;
   font: 1.5em BebasNeueRegular, sans-serif;
   padding: 10px 0;
   text-shadow: 0 1px 1px #000, 0 2px 1px #000;
@@ -114,7 +113,9 @@ nav a {
   width: 115px;
 }
 @media screen and (-webkit-min-device-pixel-ratio:0) {
-  nav a{width: auto}
+  nav a {
+    width: auto;
+  }
 }
 nav a:hover {
   color: #D0F;
